--- a/sections/veccom.tex
+++ b/sections/veccom.tex
@@ -139,7 +139,7 @@ Some other differences in the actual construction are as follows:
  \item We define the commitment (corresponding to the root of the Merkle tree) to be in non-decomposed form.
  \item We define $\proj$ and the $2\eta+1$-adic decomposition as maps over $\ring$ rather than $\ring_q$.
  \item We constrain the size of $\proj(\vec{p})$ for any node of the tree. This is not taken modulo $q$.
- \item We use a more elaborate scheme to encode decommitment. This is explained in \autoref{sec:TODO}.
+ \item We use a more elaborate scheme to encode decommitment. This is explained in \autoref{sect:efficientencoding}.
 \end{itemize}
 
 \subsection{A Homomorphic Vector Commitment based on Ring-SIS}
