--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -53,7 +53,7 @@ For keys that can generate $2^{24}$ signatures, an individual Chipmunk signature
 %Chipmunk's key generation times are smaller for these parameters by factors of $9 \times$ and $30 \times$.
 
 We have fully implemented Chipmunk and provide extensive benchmarks and comparisons to Squirrel in~\autoref{sec:benchmarks}.
-Chipmunk is the most concretely efficient multi-signature based on assumptions that are assumed to remain valid in the presence of a quantum adversary.
+Chipmunk currently is the most concretely efficient multi-signature based on assumptions that are assumed to remain valid in the presence of a quantum adversary.
 
 \subsection{Technical Overview}
 
