Request clarification for wording in intro.

--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -75,7 +75,7 @@ Chipmunk follows this blueprint, but improves upon all building blocks that are 
 \paragraph{Key-Homomorphic One-Time Signatures.}
 Squirrel uses a key-homomorphic one-time signature scheme that is similar to those of Boneh and Kim~\cite{BonKim2020} and Lyubashevsky and Micciancio~\cite{TCC:LyuMic08}.
 The details of the construction are not relevant for now.
-For Chipmunk, we use almost the exact same scheme, but observe by carefully inspecting their original security proof that a minor modification of their construction allows for their proof to produce much tighter parameters and thus smaller signatures.
+For Chipmunk, we use almost the exact same scheme, but observe by carefully inspecting their original security proof that a minor modification of their\gnote{Unclear whether ``their'' refers to Squirrel or \cite{BonKim2020} or \cite{TCC:LyuMic08}} construction allows for their proof to produce much tighter parameters and thus smaller signatures.
 
 \paragraph{Homomorphic Vector Commitments.}
 The vector commitment used by Squirrel is a homomorphic analogue of the classical Merkle tree construction.
