--- a/sections/veccom.tex
+++ b/sections/veccom.tex
@@ -28,7 +28,7 @@ Our domain, commitment and opening space will always be of the form $\moddomain 
 Note that (correctly verifying) decommitments $d\in\modopening$ will have small coefficients and undergo arithmetic modulo $q$, so the reader may think of them as elements from $\ring_q^\oplen$, as Squirrel \cite{CCS:FleSimZha22} does.
 However, we will impose some bounds on values that are not reduced modulo $q$ later, so we need to formally treat them as elements from $\ring^\oplen$ and write the modular reduction explicitly.
 
-Note that it is possible to generalize this definition slightly to have the opening space $\modopening$ be dependent on $t$, which is technically needed in \autoref{TODO}.
+Note that it is possible to generalize this definition slightly to have the opening space $\modopening$ be dependent on $t$, which is technically needed in \autoref{def:encodedhvc}.
 All our definitions and proofs also apply to this generalization.
 % Generally speaking, some of our proofs require careful distinction between $\ring$ and $\ring_q$, which is why we prefer to write $\equiv$ in place of $=$ whenever there is any chance of confusion.
 \begin{definition}[Individual Correctness]
