Fix multiple-defined label.

--- a/sections/appconstraints.tex
+++ b/sections/appconstraints.tex
@@ -16,7 +16,10 @@
 % \end{table}
 \section{Concrete Parameters}\label{sec:concreteparams}
 
-We used a script\footnote{\label{fn:github}\url{https://github.com/GottfriedHerold/Chipmunk}} find concrete parameters that allow for instantiating Chipmunk based on a hard ring-SIS problem.
+We used a script\footnote{
+\url{https://github.com/GottfriedHerold/Chipmunk}%label removed -- Gotti, was causes errors due to multiple-defined label
+}
+to find concrete parameters that allow for instantiating Chipmunk based on a hard ring-SIS problem.
 We have used a fixed ring dimension $n = 512$.
 A selection of possible parameter choices is given in Table~\ref{tab:param}.
 
