--- a/commanddefs.tex
+++ b/commanddefs.tex
@@ -81,6 +81,11 @@
 \newcommand{\modlinear}[1]{A_{\mathsf{op,lin}}^{#1}}
 \newcommand{\modencoded}[1]{A_{\mathsf{op}}^{#1}}
 
+\newcommand*{\projring}{\proj_{\eta,\limbs}}
+\newcommand*{\decompring}{\decomp_{\eta,\limbs}}
+\newcommand*{\projmod}[1]{\proj_{#1}}
+\newcommand*{\decompmod}[1]{\decomp_{#1}}
+
 \newcommand{\hashajtai}{h_\mathrm{Ajtai}}
 \newcommand{\limbs}{\gamma}
 % Used inside inkscape svg. This uses lots of LaTeX commands because the svg get messy otherwise.
